Add first layer header

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
             or
             <a href="#">create an account</a>
           </p>
+          <ul class="header-languages-list">
+            <li>En</li>
+            <li>Fr</li>
+            <li>Gm</li>
+          </ul>
+          <ul class="header-currency-list">
+            <li><span class="visually-hidden">Dolar</span></li>
+            <li><span class="visually-hidden">Euro</span></li>
+            <li><span class="visually-hidden">Funt</span></li>
+          </ul>
         </section>
       </div>
       <div class="header-second-layer"></div>
