Add second layer of header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,28 @@
           </ul>
         </section>
       </div>
-      <div class="header-second-layer"></div>
+      <div class="header-second-layer">
+        <a href="#">
+          <img
+            class="header-main-logo"
+            src="img/logo.svg"
+            alt="Main logo of our site"
+          />
+        </a>
+        <form action="header-search" method="get">
+          <input type="search" />
+        </form>
+        <ul class="header-account-list">
+          <li>My Account</li>
+          <li>My Wishlist</li>
+          <li>Log In</li>
+          <li>Sign Up</li>
+        </ul>
+        <button class="header-shopping-cart">
+          <span class="shopping-cart-logo"></span>
+          Cart $0.00
+        </button>
+      </div>
     </header>
     <main class="container"></main>
     <footer class="main-footer"></footer>
