Add advertising block

--- a/index.html
+++ b/index.html
@@ -68,11 +68,17 @@
       <section class="main-slider">
         <h1 class="visually-hidden">Breeze - online store theme</h1>
 
+        <!--Список слайдов-->
         <ul class="slider-content">
           <li><img src="#" alt="Breeze noticeables" /></li>
-          <li class="visually-hidden"><img src="#" alt="Breeze noticeables" /></li>
-          <li class="visually-hidden"><img src="#" alt="Breeze noticeables" /></li>
+          <li class="visually-hidden">
+            <img src="#" alt="Breeze noticeables" />
+          </li>
+          <li class="visually-hidden">
+            <img src="#" alt="Breeze noticeables" />
+          </li>
         </ul>
+        <!--КОнец списка слайдов-->
 
         <!--Переключение слайдов круглыми кнопками-->
         <form class="visually-hidden">
@@ -91,6 +97,38 @@
         <div class="slider-button left-button"></div>
         <div class="slider-button right-button"></div>
         <!--Конец Переключение слайдов боковыми кнопками-->
+      </section>
+      <section class="main-advertising">
+        <h2 class="visually-hidden">Best of we have</h2>
+        <ul>
+          <li>
+            <a class="main-advertising-item" href="#">
+                <img src="img/best-price.png" alt="Best price this week">   
+                <h3>
+                    Best price <br>
+                    <span>this week</span>
+                </h3>
+            </a>
+          </li>
+          <li>
+            <a class="main-advertising-item" href="#">
+                <img src="img/best-price.png" alt="New smels in the next series">   
+                <h3>
+                    New smels  <br>
+                    <span>in the next series</span>
+                </h3>
+            </a>    
+          </li>
+          <li>
+            <a href="#"  class="main-advertising-item">
+                <img src="img/best-price.png" alt="Only natural air fresheners">   
+                <h3>
+                    Only natural <br>
+                    <span>air fresheners</span>
+                </h3>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="main-footer"></footer>
