Add CSS for header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="main-header">
       <div class="header-first-layer">
         <section class="header-line-info">
-          <p>Call us +777 (100) 1234</p>
-          <p>
+          <p class="line-info-phone">Call us +777 (100) 1234</p>
+          <p class="line-info-account">
             Welcome visitor you can
             <a href="#">login</a>
             or
@@ -25,9 +25,9 @@
             <li>Gm</li>
           </ul>
           <ul class="header-currency-list">
-            <li><span class="visually-hidden">Dolar</span></li>
-            <li><span class="visually-hidden">Euro</span></li>
-            <li><span class="visually-hidden">Funt</span></li>
+            <li><span class="visually-hidden">Dolar</span>$</li>
+            <li><span class="visually-hidden">Euro</span>&euro;</li>
+            <li><span class="visually-hidden">Funt</span>&pound;</li>
           </ul>
         </section>
       </div>
@@ -43,10 +43,10 @@
           <input type="search" />
         </form>
         <ul class="header-account-list">
-          <li>My Account</li>
-          <li>My Wishlist</li>
-          <li>Log In</li>
-          <li>Sign Up</li>
+          <li><a href="#">My Account</a></li>
+          <li><a href="#">My Wishlist</a></li>
+          <li><a href="#">Log In</a></li>
+          <li><a href="#">Sign Up</a></li>
         </ul>
         <button class="header-shopping-cart">
           <span class="shopping-cart-logo"></span>
