Add CSS styles for footer

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       </div>
       <nav class="main-navigation">
         <ul class="main-navigation-list">
-          <li>Home</li>
-          <li>Solids</li>
-          <li>Liquids</li>
-          <li>Spray</li>
-          <li>Electric</li>
-          <li>For cars</li>
+          <li><a href="#">Home</a</li>
+          <li><a href="#">Solids</li>
+          <li><a href="#">Liquids</li>
+          <li><a href="#">Spray</li>
+          <li><a href="#">Electric</li>
+          <li><a href="#">For cars</li>
         </ul>
       </nav>
     </header>
@@ -389,8 +389,64 @@
           </ul>
       </section>
     </main>
+
+
     <footer class="main-footer">
-        
+        <div class="footer-first-layer">
+            <ul class="footer-categories-list">
+                <li>
+                    <span class="footer-head-text">
+                        Contact us
+                    </span>
+                    <p class="footer-address">49 Archdale, 28 charlestone</p>
+                    <p class="footer-phone">+777 (100) 1234</p>
+                    <p class="footer-email">mel@exemple.com</p>
+                </li>
+                <li>
+                    <span class="footer-head-text">
+                        Information
+                    </span>
+                    <ul class="footer-information-list">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Privacy policy</a></li>
+                        <li><a href="#">Terms and Conditions</a></li>
+                        <li><a href="#">Secure payment</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="footer-head-text">
+                        Costumer service
+                    </span>
+                    <ul class="footer-information-list">
+                        <li><a href="#">Contact us</a></li>
+                        <li><a href="#">Return</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Site map</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="footer-head-text">
+                        My account
+                    </span>
+                    <ul class="footer-information-list">
+                        <li><a href="#">My account</a></li>
+                        <li><a href="#">Order history</a></li>
+                        <li><a href="#">Wish list</a></li>
+                        <li><a href="#">Newsletter</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-second-layer">
+            <div class="footer-second-layer-container">
+                <p class="copyright">Breeze store theme, 2012</p>
+                <div class="footer-social-media-list">
+                    <a href="#"><span class="visually-hidden">Facebook</span></a>
+                    <a href="#"><span class="visually-hidden">Twitter</span></a>
+                    <a href="#"><span class="visually-hidden">Google</span></a>
+                </div>
+            </div>
+        </div>
     </footer>
   </body>
 </html>
